# autocad-arch-mcp

./: .gitignore  README.md  pyproject.toml  test_script.py
autocad_arch_mcp/: __init__.py  server.py
